--- a/.reek.yml
+++ b/.reek.yml
@@ -11,6 +11,10 @@ detectors:
   IrresponsibleModule:
     enabled: false
 
+  TooManyInstanceVariables:
+    exclude:
+      - Jat::Attribute
+
 directories:
   "spec":
     Attribute:
