Make `fields` and `include` params work together

--- a/spec/.rubocop.yml
+++ b/spec/.rubocop.yml
@@ -14,6 +14,9 @@ RSpec/ExampleLength:
 RSpec/MultipleExpectations:
   Enabled: false
 
+RSpec/MultipleMemoizedHelpers:
+  Enabled: false
+
 RSpec/DescribeClass:
   Exclude:
     - features/**/*_spec.rb
