Add presenter class to not mix serializer and presenter methods

--- a/.reek.yml
+++ b/.reek.yml
@@ -5,6 +5,9 @@ detectors:
   IrresponsibleModule:
     enabled: false
 
+  ModuleInitialize:
+    enabled: false
+
 directories:
   "spec":
     Attribute:
