--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,7 @@ jobs:
       matrix:
         ruby: 
           - jruby-9.3.2
-          - truffleruby
-          - truffleruby+graalvm
+          - truffleruby-21.3.0
           - "3.1"
           - "3.0"
           - "2.7"
